<resources>
    <string name="login_app_name">login</string>
    <string name="login_alert_account_error">账户或密码错误\n请重新输入</string>
    <string name="login_btn_confirm">确定</string>
    <string name="login_back">返回</string>
    <string name="login_reset_password">重置密码</string>
    <string name="login_hint_account">请输入手机号/邮箱</string>
    <string name="login_hint_code">请输入验证码</string>
    <string name="login_login_tab">登录(tab)</string>
    <string name="login_login_nav">登录(nav)</string>
    <string name="login_confirm">确定</string>
    <string name="login_hint_get_code">获取验证码</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_register">注册</string>
    <string name="login_string_agreement">我已阅读并接受《用户注册协议》</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register_now">立即注册</string>
    <string name="login_remember_count">记住用户名和密码</string>
</resources>
