<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradient_green_blue_270"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/reset_password_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_chevron_left_black_48dp"
            android:drawablePadding="-12dp"
            android:gravity="center"
            android:text="@string/login_back"
            android:textColor="@color/login_white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@mipmap/image_avatar_rocket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="@string/login_reset_password"
            android:textColor="@color/login_white"
            android:textSize="22sp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/reset_account_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入手机号/邮箱"
            android:inputType="textVisiblePassword" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reset_code_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_code"
                android:inputType="textVisiblePassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reset_getCode_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"
            android:background="?android:selectableItemBackground"
            android:text="@string/login_hint_get_code"
            android:textColor="@color/login_blue" />

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/reset_password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_btn"
        android:text="@string/login_confirm"
        android:textColor="@color/login_white"
        android:textSize="20sp" />

</LinearLayout>