<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<com.flaviofaria.kenburnsview.KenBurnsView-->
        <!--android:id="@+id/login_bg_image"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@mipmap/login_bg"-->
        <!--android:scaleType="centerCrop"/>-->

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_bg_image"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/login_account_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入手机号/邮箱"
            android:inputType="textVisiblePassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/login_remember_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:text="@string/login_remember_count"
        android:textSize="12sp"
        android:textColor="@color/login_blue"
        android:theme="@style/BlueCheckBox" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_btn"
        android:text="@string/login_login"
        android:textColor="@color/login_white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="演示程序请直接点击登录"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_forget_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:text="@string/login_forget_password"
            android:textColor="@color/login_blue"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_margin="24dp"
            android:background="@color/login_blue" />

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/login_register_now"
            android:textColor="@color/login_blue"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.v7.widget.FitWindowsFrameLayout>